including mailing list

--- a/public/index.html
+++ b/public/index.html
@@ -19,5 +19,8 @@
       <input type="email" name="email" />
       <textarea name="message"></textarea>
     </form>
+    <form name="mailing-list" netlify netlify-honeypot="bot-field" hidden>
+      <input type="email" name="email" />
+    </form>
   </body>
 </html>
