--- a/public/index.html
+++ b/public/index.html
@@ -14,13 +14,13 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!-- <form name="contact" netlify netlify-honeypot="bot-field" hidden>
+    <form name="contact" netlify netlify-honeypot="bot-field" hidden>
       <input type="text" name="name" />
       <input type="email" name="email" />
       <textarea name="message"></textarea>
     </form>
     <form name="mailing-list" netlify netlify-honeypot="bot-field" hidden>
       <input type="email" name="email" />
-    </form> -->
+    </form>
   </body>
 </html>
