added action to form

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,8 @@
     <form
       name="form-name"
       netlify
+      method="post"
+      action="/contact"
       data-netlify="true"
       netlify-honeypot="bot-field"
       hidden
