--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
       name="form-name"
       netlify
       method="post"
-      action="/contact"
+      action="/"
       data-netlify="true"
       netlify-honeypot="bot-field"
       hidden
